[build-system]
requires = ["jupyter_packaging==0.7.9", "jupyterlab==3.*", "setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "ipyannotations/tests",
    "examples",
]
norecursedirs = [
    "node_modules",
    ".ipynb_checkpoints",
]
addopts = "--nbval --current-env"
