[bdist_wheel]
universal=1

[metadata]
long_description = file: README.md
long_description_content_type = "text/markdown"
license_file = LICENSE

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    pass
    __repr__
    __version__

[coverage:paths]
source =
    src/
